[package]
name = "btc-address-tools"
version = "1.0.0"
edition = "2021"
authors = ["Salugu Harshita Bhanu"]
description = "Comprehensive Bitcoin address toolkit: validator, HD wallet generator, and educational tool"
license = "MIT"

[[bin]]
name = "btc-tools"
path = "src/main.rs"

[dependencies]
# Bitcoin core libraries
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand"] }
bip39 = "2.0"

# Encoding/Decoding
hex = "0.4"
base58 = "0.2"

# CLI interface
clap = { version = "4.4", features = ["derive", "cargo"] }
dialoguer = "0.11"
console = "0.15"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
